; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/extr_dm-bio-prison-v2.c___promote.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/extr_dm-bio-prison-v2.c___promote.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dm_bio_prison_v2 = type { i32 }
%struct.dm_bio_prison_cell_v2 = type { i32, i64, i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dm_bio_prison_v2*, %struct.dm_bio_prison_cell_v2*, i32)* @__promote to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__promote(%struct.dm_bio_prison_v2* %0, %struct.dm_bio_prison_cell_v2* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.dm_bio_prison_v2*, align 8
  %6 = alloca %struct.dm_bio_prison_cell_v2*, align 8
  %7 = alloca i32, align 4
  store %struct.dm_bio_prison_v2* %0, %struct.dm_bio_prison_v2** %5, align 8
  store %struct.dm_bio_prison_cell_v2* %1, %struct.dm_bio_prison_cell_v2** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load %struct.dm_bio_prison_cell_v2*, %struct.dm_bio_prison_cell_v2** %6, align 8
  %9 = getelementptr inbounds %struct.dm_bio_prison_cell_v2, %struct.dm_bio_prison_cell_v2* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 8
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %15, label %12

12:                                               ; preds = %3
  %13 = load i32, i32* @EINVAL, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %4, align 4
  br label %24

15:                                               ; preds = %3
  %16 = load i32, i32* %7, align 4
  %17 = load %struct.dm_bio_prison_cell_v2*, %struct.dm_bio_prison_cell_v2** %6, align 8
  %18 = getelementptr inbounds %struct.dm_bio_prison_cell_v2, %struct.dm_bio_prison_cell_v2* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 8
  %19 = load %struct.dm_bio_prison_cell_v2*, %struct.dm_bio_prison_cell_v2** %6, align 8
  %20 = getelementptr inbounds %struct.dm_bio_prison_cell_v2, %struct.dm_bio_prison_cell_v2* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = icmp sgt i64 %21, 0
  %23 = zext i1 %22 to i32
  store i32 %23, i32* %4, align 4
  br label %24

24:                                               ; preds = %15, %12
  %25 = load i32, i32* %4, align 4
  ret i32 %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
